Add button and links

--- a/index.html
+++ b/index.html
@@ -25,10 +25,18 @@
         <p>Explore over 600 open-source geospatial projects.</p>
       </div>
     </header>
+    <div class="m-4 p-4 max-w-7xl mx-auto">
+      <div class="float-right"><calcite-button href="https://github.com/Esri" scale="l">View on GitHub &gt;</calcite-button></div>
+    </div>
     <main id="main" class="pt-12 px-4 max-w-7xl mx-auto">
       <!-- The JavaScript will place content here -->
     </main>
     <footer class="bg-[#efefef] text-center">
+      <div class="flex flex-row m-4 p-4 max-w-7xl mx-auto">
+        <div class="flex-none"><calcite-link href="https://github.com/Esri">Explore other open-source projects</calcite-link></div>
+        <div class="grow">&nbsp;</div>
+        <div class="flex-none"><calcite-link href="https://developers.arcgis.com/">ArcGIS APIs, tools, and location services</calcite-link></div>
+      </div>
       <a href="https://esri.com" class="">
         <img class="max-w-xs inline-block m-8" src="http://esri.github.io/assets/img/logo/esri-logo.svg" />
       </a>
