--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         <p>Explore over 600 open-source geospatial projects.</p>
       </div>
     </header>
-    <div class="m-4 p-4 max-w-7xl mx-auto">
-      <div class="float-right"><calcite-button href="https://github.com/Esri" scale="l">View on GitHub &gt;</calcite-button></div>
+    <div class="bg-[#efefef]">
+      <form method="get" action="https://github.com/Esri" class="mx-auto max-w-7xl py-14 text-white p-4 flex flex-row">
+        <calcite-input class="grow" name="q" scale="l"></calcite-input>
+        <calcite-button scale="l">View on GitHub &gt;</calcite-button>
+      </form>
     </div>
     <main id="main" class="pt-12 px-4 max-w-7xl mx-auto">
       <!-- The JavaScript will place content here -->
