--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- The JavaScript will place content here -->
     </main>
     <footer class="bg-[#efefef] text-center">
-      <div class="flex flex-row m-4 p-4 max-w-7xl mx-auto">
+      <div class="md:flex md:flex-row m-4 p-4 max-w-7xl mx-auto">
         <div class="flex-none"><calcite-link href="https://github.com/Esri">Explore other open-source projects</calcite-link></div>
         <div class="grow">&nbsp;</div>
         <div class="flex-none"><calcite-link href="https://developers.arcgis.com/">ArcGIS APIs, tools, and location services</calcite-link></div>
