--- a/index.html
+++ b/index.html
@@ -43,12 +43,10 @@
       <div class="md:flex md:flex-row m-4 p-4 max-w-7xl mx-auto">
         <div class="flex-none"><calcite-link href="https://github.com/Esri">Explore other open-source projects</calcite-link></div>
         <div class="grow">&nbsp;</div>
-        <div class="flex-none">
-          <calcite-link href="https://developers.arcgis.com/">ArcGIS APIs, tools, and location services</calcite-link>
-        </div>
+        <div class="flex-none"><calcite-link href="https://developers.arcgis.com/">ArcGIS APIs, tools, and location services</calcite-link></div>
       </div>
       <a href="https://esri.com" class="">
-        <img class="max-w-xs inline-block p-8" src="http://esri.github.io/assets/img/logo/esri-logo.svg" />
+        <img class="max-w-xs inline-block p-8" src="https://esri.github.io/assets/logo/esri-logo.svg" />
       </a>
     </footer>
     <script src="index.js"></script>
