moves page to search results after a search

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
     </header>
     <div class="bg-[#efefef]">
-      <form method="get" action="https://github.com/Esri" class="mx-auto max-w-7xl py-14 text-white p-4 flex flex-row">
+      <form method="get" action="https://github.com/Esri#org-profile-repositories" class="mx-auto max-w-7xl py-14 text-white p-4 flex flex-row">
         <calcite-input
           class="grow"
           name="q"
