update to latest calcite

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" type="text/css" href="https://webapps-cdn.esri.com/CDN/fonts/v1.4.0/fonts.css" />
 
     <!-- Calcite: -->
-    <script type="module" src="https://js.arcgis.com/calcite-components/1.0.0-beta.93/calcite.esm.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/1.0.0-beta.93/calcite.css" />
-
+    <script type="module" src="https://js.arcgis.com/calcite-components/2.10.1/calcite.esm.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://js.arcgis.com/calcite-components/2.10.1/calcite.css" />
+    
     <!-- YAML processor: -->
     <script src="https://unpkg.com/js-yaml@4/dist/js-yaml.js"></script>
   </head>
